# sdk_env

./: .gitmodules  CHANGELOG.md  README.md  README_zh.md  cmd_params.yaml  generate_all_ses_projects.cmd  start_cmd.cmd
.github/workflows/: release.yml
doc/: README.html  README_zh.html
hpm_sdk/: .clang-format
toolchains/: README.md
toolchains/rv32imac-ilp32-multilib-win/riscv32-unknown-elf/lib/: libstdc++.a-gdb.py  libstdc++.la  libsupc++.la
toolchains/rv32imac-ilp32-multilib-win/share/info/: annotate.info  bfd.info  binutils.info  cpp.info  dir  gcc.info  gccint.info  gdb.info  gprof.info  ld.info  stabs.info
toolchains/rv32imac_zicsr_zifencei_multilib_b_ext-win/riscv32-unknown-elf/lib/: libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la  libsupc++.la
toolchains/rv32imac_zicsr_zifencei_multilib_b_ext-win/share/info/: annotate.info  as.info  bfd.info  binutils.info  gcc.info  gccinstall.info  gccint.info  gdb.info  gprof.info  ld.info  ldint.info  sframe-spec.info  stabs.info
tools/cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/project_generator/: License.txt  README.txt  preset.bat  quick_link.json
tools/python3/: python.cat
tools/scripts/: generate_board_ses_projects.cmd  generate_project.cmd  program_flash.cmd
user_template/: README_en.md  README_zh.md
user_template/user_app/: CMakeLists.txt
user_template/user_app/linkers/segger/: user_linker.icf
user_template/user_app/src/: main.c
user_template/user_board/: CMakeLists.txt  board.c  board.h  pinmux.c  pinmux.h  user_board.cfg  user_board.yaml
(+20987 files in other folders)
